Database table changed; New api create empty row added;
